# SecureVault

./: .replit  README.md  app.py  audit.py  crypto.py  crypto_benchmarks.py  demo_script.md  pyproject.toml  replit.md  security_notes.md  storage.py  wipe.py
attached_assets/: Pasted-Build-GhostVault-a-student-grade-secure-vault-that-supports-real-vault-multiple-decoy-vaults-a-p-1755023757591_1755023757593.txt
sample_data/decoy1/: class_schedule.txt  homework.txt
sample_data/decoy2/: recipes.txt  shopping_list.txt
sample_data/real_vault/: document1.txt  secret_notes.txt
static/: app.js  style.css
templates/: benchmark_results.html  create.html  index.html  security_audit.html  system_status.html  unlock.html  vault_view.html
tests/: test_crypto.py  test_integration.py  test_storage.py  test_wipe.py
